
When a reply times out, the future is completed exceptionally with a `KafkaReplyTimeoutException` instead of a `KafkaException`.

Also, an overloaded `sendAndReceive` method is now provided that allows specifying the reply timeout on a per message basis.

==== AggregatingReplyingKafkaTemplate

Extends the `ReplyingKafkaTemplate` by aggregating replies from multiple receivers.
See <<aggregating-request-reply>> for more information.

==== Transaction Changes

You can now override the producer factory's `transactionIdPrefix` on the `KafkaTemplate` and `KafkaTransactionManager`.
See <<transaction-id-prefix>> for more information.

==== New Delegating Serializer/Deserializer

The framework now provides a delegating `Serializer` and `Deserializer`, utilizing a header to enable producing and consuming records with multiple key/value types.
See <<delegating-serialization>> for more information.

==== New Retrying Deserializer

The framework now provides a delegating `RetryingDeserializer`, to retry serialization when transient errors such as network problems might occur.
See <<retrying-deserialization>> for more information.

==== New function for recovering from deserializing errors

`ErrorHandlingDeserializer2` now uses a POJO (`FailedDeserializationInfo`) for passing all the contextual information around a deserialization error.
This enables the code to access to extra information that was missing in the old `BiFunction<byte[], Headers, T> failedDeserializationFunction`.

==== EmbeddedKafkaBroker Changes

You can now override the default broker list property name in the annotation.
See <<kafka-testing-embeddedkafka-annotation>> for more information.

==== ReplyingKafkaTemplate Changes

You can now customize the header names for correlation, reply topic and reply partition.
See <<replying-template>> for more information.

==== Header Mapper Changes

The `DefaultKafkaHeaderMapper` no longer encodes simple String-valued headers as JSON.